--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
        </p>
         </div>
         <div class="section">
-         <img src="../images/profileimg.png" alt="profile picture"/>
+         <img src="./profileimg.png" alt="profile picture"/>
         </div>
       </div>
 
