--- a/contact.html
+++ b/contact.html
@@ -179,6 +179,6 @@
     <footer>
       © 2025 Brijesh Yadav | Portfolio Website | All Rights Reserved
     </footer>
-    <script src="../JS/buttons.js"></script>
+    <script src="./buttons.js"></script>
   </body>
 </html>
