--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         position: fixed;
         top: 0;
         width: 100%;
-        z-index: 1000; 
-        background: white; 
+        z-index: 1000;
+        background-color: rgb(18, 18, 62);
       }
       nav {
         display: flex;
@@ -180,11 +180,11 @@
         <div class="left">Brijesh Portfolio</div>
         <div class="right">
           <ul>
-            <li><a href="../HTML/index.html">Home</a></li>
-            <li><a href="../HTML/about.html">About</a></li>
-            <li><a href="../HTML/service.html">Services</a></li>
-            <li><a href="../HTML/projects.html">Projects</a></li>
-            <li><a href="../HTML/contact.html">Contact Me</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./service.html">Services</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./contact.html">Contact Me</a></li>
           </ul>
         </div>
       </nav>
@@ -203,7 +203,7 @@
           </div>
         </div>
         <div class="rightSection">
-          <img src="../images/bg.png" alt="profile picture" />
+          <img src="./bg.png" alt="profile picture" />
         </div>
       </section>
 
@@ -215,7 +215,7 @@
 
         <div class="box">
           <div class="vertical">
-            <img class="image-top" src="../images/Education.png" alt="" />
+            <img class="image-top" src="./Education.png" alt="" />
             <div class="vertical-title">
               <h2>Secondary Education</h2>
               <h3>2018 - 2019</h3>
@@ -225,7 +225,7 @@
           </div>
 
           <div class="vertical">
-            <img class="image-top" src="../images/Education.png" alt="" />
+            <img class="image-top" src="./Education.png" alt="" />
             <div class="vertical-title">
               <h2>Higher Secondary Education</h2>
               <h3>2020 - 2021</h3>
@@ -235,7 +235,7 @@
           </div>
 
           <div class="vertical">
-            <img class="image-top" src="../images/Education.png" alt="" />
+            <img class="image-top" src="./Education.png" alt="" />
             <div class="vertical-title">
               <h2>Bachelor of Technology</h2>
               <h3>2022 - Present</h3>
@@ -257,10 +257,10 @@
         </div>
         <div class="footer-second">
           <ul>
-            <li><a href="../HTML/index.html">Home</a></li>
-            <li><a href="../HTML/about.html">About</a></li>
-            <li><a href="../HTML/service.html">Services</a></li>
-            <li><a href="../HTML/contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./service.html">Services</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-third">
@@ -290,6 +290,6 @@
         typeSpeed: 50,
       });
     </script>
-    <script src="/JS/buttons.js"></script>
+    <script src="./buttons.js"></script>
   </body>
 </html>
